Fix education section spacing

--- a/style/indexstyle.css
+++ b/style/indexstyle.css
@@ -151,19 +151,23 @@ iframe {
   color: grey;
 }
 
-.column.resume-text {
+.column.education-text {
   display:flex;
   flex-direction: row;
   justify-content: left;
 }
-.dark-subtext:nth-child(2) {
+#macalester-edu>.dark-subtext:nth-child(2) {
+  padding-left: 15px;
+}
+
+#macalester-edu>.dark-subtext:nth-child(3) {
   padding-left: 15px;
 }
 
 h5 {
   color: #46494C;
 }
-.macalester-content-resume, .edina-content-resume {
+.macalester-content-education, .edina-content-education {
   padding-left: 15px;
 }
 ul {
